--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,11 +1,4 @@
 idf_component_register(
-    SRCS "main.c"
-    INCLUDE_DIRS "."
-    REQUIRES
-        nvs_flash
-        esp_wifi
-        esp_netif
-        esp_event
-        esp_timer
-        vfs
+  SRCS "main.c"
+  REQUIRES esp_wifi esp_event esp_netif nvs_flash sht4x
 )
